--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -27,15 +27,14 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Cache newt packages
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.newt
-          project.state
-        key: ${{ runner.os }}-newt-${{ hashFiles('project.yml') }}
-        restore-keys: |
-          ${{ runner.os }}-newt-
+    - name: Install Newt
+      run: |
+        go install mynewt.apache.org/newt/newt@latest
+        echo "${HOME}/go/bin" >> $GITHUB_PATH
+
+    - name: Verify Newt Installation
+      run: |
+        newt version
 
     - name: Run Build Script
       run: ./scripts/build.sh
