--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -19,7 +19,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y git make gcc-arm-none-eabi python3 python3-pip
         # Install Apache Mynewt tools
-        python3 -m pip install --user https://github.com/apache/mynewt-newt/releases/download/mynewt_1_10_0_tag/newt-1.10.0.tar.gz
+        python3 -m pip install --user https://github.com/apache/mynewt-newt/archive/mynewt_1_10_0_tag.tar.gz
         echo "$HOME/.local/bin" >> $GITHUB_PATH
 
     - name: Add Fuzzing Source
