--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -17,15 +17,14 @@ jobs:
     - name: Setup Build Environment
       run: |
         sudo apt-get update
-        sudo apt-get install -y git make gcc-arm-none-eabi python3 python3-pip
-        # Install Mynewt Newt tool
-        wget https://github.com/apache/mynewt-newt/releases/download/mynewt_1_10_0_tag/newt_1.10.0_linux_amd64.tar.gz
-        tar -xzf newt_1.10.0_linux_amd64.tar.gz
+        sudo apt-get install -y git make gcc-arm-none-eabi python3 python3-pip golang-go
+        # Install Mynewt Newt from source
+        wget https://github.com/apache/mynewt-newt/archive/refs/tags/mynewt_1_13_0_tag.zip
+        unzip mynewt_1_13_0_tag.zip
+        cd mynewt-newt-mynewt_1_13_0_tag
+        ./build.sh
         sudo mv newt/newt /usr/local/bin
         newt version
-        # Install Mynewt dependencies
-        go install mynewt.apache.org/newt/newt@latest
-        echo "$HOME/go/bin" >> $GITHUB_PATH
 
     - name: Add Fuzzing Source
       run: |
@@ -60,6 +59,5 @@ jobs:
 
     - name: Verify Patches
       run: |
-        # Check for fuzzing symbols in final binary
         arm-none-eabi-objdump -t firmware.elf | grep -q 'g_phy_raw_tx_mode'
         arm-none-eabi-objdump -t firmware.elf | grep -q 'ble_fuzz_init'
