--- a/src/project.yml
+++ b/src/project.yml
@@ -1,3 +1,9 @@
 pkg.deps.APP_FUZZ:
     - "@apache-mynewt-nimble/apps/blehci"
-    - "path/to/ble_fuzz"
+    - '@apache-mynewt-nimble/controller'
+    - '@apache-mynewt-nimble/host'
+    - 'src/ble_fuzzer'
+
+syscfg.vals:
+    FUZZING_MODE: 1
+    BLE_LL_VENDOR_FEATURES: 1 # ll hci command
