--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -25,19 +25,23 @@ jobs:
         ./build.sh
         sudo mv newt/newt /usr/local/bin
         newt version
+        cd ..
 
     - name: Initialize Mynewt Core
       run: |
         newt install -f -v apache-mynewt-core
-        newt install -f -v apache-mynewt-nimble
+
+    - name: Checkout NimBLE
+      uses: actions/checkout@v4
+      with:
+        repository: apache/mynewt-nimble
+        path: mynewt-nimble
 
     - name: Add Fuzzing Source code
       run: |
-        # Copy fuzzing controller & transport components
-        cp -r mynewt-nimble/nimble/controller/* repos/apache-mynewt-nimble/nimble/controller/
-        cp -r mynewt-nimble/nimble/transport/* repos/apache-mynewt-nimble/nimble/transport/
-        # Copy nRF52 porting files
-        cp -r mynewt-nimble/nimble/porting/nrf5x repos/apache-mynewt-nimble/nimble/porting/
+        cp -r mynewt-nimble/nimble/controller/* mynewt-nimble/nimble/controller/
+        cp -r mynewt-nimble/nimble/transport/* mynewt-nimble/nimble/transport/
+        cp -r mynewt-nimble/nimble/porting/nrf5x mynewt-nimble/nimble/porting/
 
     - name: Build Fuzzing Firmware
       run: |
