--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -30,7 +30,9 @@ jobs:
     - name: Initialize Mynewt Core
       run: |
         newt install -f -v apache-mynewt-core
-
+        # Verify installation location
+        ls -l repos/apache-mynewt-core
+        
     - name: Checkout NimBLE
       uses: actions/checkout@v4
       with:
@@ -42,6 +44,17 @@ jobs:
         cp -rf mynewt-nimble/nimble/controller/* repos/apache-mynewt-nimble/nimble/controller/
         cp -rf mynewt-nimble/nimble/transport/* repos/apache-mynewt-nimble/nimble/transport/
         cp -rf mynewt-nimble/nimble/porting/nrf5x repos/apache-mynewt-nimble/nimble/porting/
+   
+    - name: setup mynewt
+      run: |
+        # Initialize a Mynewt project
+        newt new mynewt-fuzzer
+        cd mynewt-fuzzer
+
+        # Add repositories to the project
+        newt repo add apache-mynewt-core ../repos/apache-mynewt-core
+        newt repo add apache-mynewt-nimble ../repos/apache-mynewt-nimble
+        newt install -v -f
 
     - name: Build Fuzzing Firmware
       run: |
@@ -53,6 +66,8 @@ jobs:
         newt build nrf52_fuzzer
         newt create-image nrf52_fuzzer 1.0.0
         newt obj copy nrf52_fuzzer firmware.elf
+        mv firmware.elf ../
+        cd ../
 
     - name: Upload Firmware Artifact
       uses: actions/upload-artifact@v4
